fullstack complete, not  smooth but it works : )

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "jest"
   },
   "author": "Ishan Parikh",
   "license": "ISC",
